data/derived/comb/progs/unify/prog5740.ml.out
Characters 75-91:
  | h::t -> string_of_int h ^ stringOfList f t;;
                              ^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         string
